--- a/auth-service/env/.env.sample
+++ b/auth-service/env/.env.sample
@@ -1,8 +1,5 @@
 PROJECT_NAME=
 
-ELASTIC_HOST=
-ELASTIC_PORT=
-
 REDIS_HOST=
 REDIS_PORT=
 
@@ -12,3 +9,7 @@ DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
+
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
