--- a/auth-service/nginx/auth_service.conf
+++ b/auth-service/nginx/auth_service.conf
@@ -10,7 +10,7 @@ server {
     root /home/data;
 
     location @backend {
-        proxy_pass http://movie_app:8000;
+        proxy_pass http://auth_service_app:8000;
     }
 
     location ~* \.(?:jpg|jpeg|gif|png|ico|css|js)$ {
@@ -19,7 +19,7 @@ server {
     }
 
     location /api/openapi {
-        proxy_pass http://movie_app:8000/api/openapi;
+        proxy_pass http://auth_service_app:8000/api/openapi;
     }
 
     location / {
