--- a/auth-service/env/.env.sample
+++ b/auth-service/env/.env.sample
@@ -3,13 +3,9 @@ PROJECT_NAME=
 REDIS_HOST=
 REDIS_PORT=
 
-DB_HOST=
-DB_PORT=
+POSTGRES_HOST=
+POSTGRES_PORT=
 
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-
+POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-POSTGRES_DB=
