Create superuser command

--- a/auth-service/env/.env.sample
+++ b/auth-service/env/.env.sample
@@ -9,3 +9,10 @@ POSTGRES_PORT=
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+
+#registration new user
+ROOT_LOGIN=
+ROOT_PASSWORD=
+ROOT_EMAIL=
+ROOT_FIRST_NAME=
+ROOT_LAST_NAME=
