--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,7 +55,7 @@ services:
     container_name: auth_service_tests
     entrypoint: >
       sh -c "python3 /home/tests/functional/utils/wait_for_postgres.py
-      && pytest /home/tests/functional/src/test_permissions.py"
+      && pytest /home/tests/functional/src/"
     links:
       - auth_service_app
       - auth_service_db
