--- a/auth-service/env/.tests.env.sample
+++ b/auth-service/env/.tests.env.sample
@@ -1,14 +1,16 @@
-ELASTIC_HOST=
-ELASTIC_PORT=
+PROJECT_NAME=auth_service_app
 
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=redis_db
+REDIS_PORT=6379
 
-SERVICE_URL=
+#POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=auth_service_db
+POSTGRES_PORT=5432
 
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+POSTGRES_DB=auth_service_database
+POSTGRES_USER=app
+POSTGRES_PASSWORD=123qwe
 
-DB_HOST=
-DB_PORT=
+#SERVICE_URL=127.0.0.1
+
+SERVICE_URL=auth_service_app
