--- a/auth-service/env/.env.sample
+++ b/auth-service/env/.env.sample
@@ -1,18 +1,20 @@
-PROJECT_NAME=
+PROJECT_NAME=auth_service_app
 
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=redis_db
+REDIS_PORT=6379
 
-POSTGRES_HOST=
-POSTGRES_PORT=
+#POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=auth_service_db
+POSTGRES_PORT=5432
 
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+POSTGRES_DB=auth_service_database
+POSTGRES_USER=app
+POSTGRES_PASSWORD=123qwe
 
 #registration new user
-ROOT_LOGIN=
-ROOT_PASSWORD=
-ROOT_EMAIL=
-ROOT_FIRST_NAME=
-ROOT_LAST_NAME=
+ROOT_LOGIN=superuser
+ROOT_PASSWORD=superuser
+ROOT_EMAIL=superuser@gmail.com
+ROOT_FIRST_NAME=superuser
+ROOT_LAST_NAME=superuser
+
