--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = alembic,async_fastapi_jwt_auth,dotenv,elasticsearch,fastapi,orjson,pydantic,pytest,redis,sqlalchemy,sqlmodel,src,uvicorn,werkzeug
+known_third_party = alembic,async_fastapi_jwt_auth,asyncpg,dotenv,elasticsearch,fastapi,fastapi_limiter,fastapi_pagination,httpx,orjson,pydantic,pytest,pytest_asyncio,redis,sqlalchemy,sqlmodel,src,starlette,tests,typer,typing_extensions,uvicorn,werkzeug
