--- a/auth-service/app/requirements.txt
+++ b/auth-service/app/requirements.txt
@@ -21,3 +21,14 @@ python-dotenv==1.0.0
 fastapi-limiter==0.1.5
 fastapi-pagination==0.12.9
 python-multipart==0.0.6
+opentelemetry-api==1.17.0
+opentelemetry-exporter-jaeger==1.17.0
+opentelemetry-exporter-jaeger-proto-grpc==1.17.0
+opentelemetry-exporter-jaeger-thrift==1.17.0
+opentelemetry-instrumentation==0.38b0
+opentelemetry-instrumentation-asgi==0.38b0
+opentelemetry-instrumentation-fastapi==0.38b0
+opentelemetry-sdk==1.17.0
+opentelemetry-semantic-conventions==0.38b0
+opentelemetry-util-http==0.38b0
+
