--- a/auth-service/nginx/nginx.conf
+++ b/auth-service/nginx/nginx.conf
@@ -11,9 +11,10 @@ http {
 
   include       /etc/nginx/mime.types;
   default_type /application/octet-stream;
-  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" $request_id'
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
+
 
   sendfile        on;
   tcp_nodelay     on;
@@ -36,6 +37,7 @@ http {
   proxy_set_header   Host             $host;
   proxy_set_header   X-Real-IP        $remote_addr;
   proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+  proxy_set_header X-Request-Id $request_id;
 
   include /etc/nginx/conf.d/*.conf;
 }
